--- a/_quarto.yml
+++ b/_quarto.yml
@@ -8,7 +8,7 @@ project:
 
 book:
   title: "Guía Práctica de Herramientas CLI con Homebrew"
-  subtitle: "Manual completo de herramientas de línea de comandos para desarrolladores"
+  subtitle: "Manual completo de herramientas de línea de comandos"
   author: 
     - name: "Luis Aguilera"
       url: "https://github.com/laguileracl"
@@ -18,48 +18,53 @@ book:
   
   # Configuración del libro
   downloads: [pdf, epub, docx]
-  cover-image: cover.png
   
-  # Sidebar y navegación limpia
+  # Sidebar y navegación
   sidebar:
     search: true
-    collapse-level: 1
     
-  # Footer profesional
+  # Footer limpio
   page-footer:
-    left: "© 2025 CLI Tools Guide"
-    center: "Construido con [Quarto](https://quarto.org/)"
-    right: "[Editar esta página]({{< meta params.github_edit >}})"
+    left: "CLI Tools Guide - Guía de herramientas de línea de comandos"
+    center: "Generado con [Quarto](https://quarto.org/)"
+    right: "[GitHub](https://github.com/laguileracl/homebrew-cli-guide)"
       
-  # Navegación GitHub
+  # Navegación
   repo-url: "https://github.com/laguileracl/homebrew-cli-guide"
   repo-actions: [edit, source, issue]
   
-  # Estructura de capítulos numerados
   chapters:
     - index.qmd
-    - part: "Getting Started"
-      chapters:
-        - interactive-playground.qmd
-    - part: "Part I: Navigation & File Management"
+    - interactive-playground.qmd
+    - part: "Navegación y Exploración"
       chapters:
         - navegacion.qmd
+    - part: "Gestión de Archivos"
+      chapters:
         - archivos.qmd
-    - part: "Part II: Search & Development"
+    - part: "Búsqueda y Filtrado"
       chapters:
         - busqueda.qmd
+    - part: "Desarrollo y Git"
+      chapters:
         - desarrollo.qmd
-    - part: "Part III: Media & Network"
+    - part: "Multimedia"
       chapters:
         - multimedia.qmd
+    - part: "Red y Descargas"
+      chapters:
         - red.qmd
-    - part: "Part IV: System & Text"
+    - part: "Monitoreo del Sistema"
       chapters:
         - monitoreo.qmd
+    - part: "Texto y Documentos"
+      chapters:
         - texto.qmd
-    - part: "Part V: Advanced Topics"
+    - part: "Utilidades Diversas"
       chapters:
         - utilidades.qmd
+    - part: "Recursos Adicionales"
+      chapters:
         - combinaciones.qmd
         - configuracion.qmd
         - ecosystem-integration.qmd
@@ -68,43 +73,28 @@ bibliography: references.bib
 
 format:
   html:
-    theme: 
-      - cosmo
+    theme: cosmo
+    css: 
       - styles.css
-    css: custom-interactive.css
+      - custom-interactive.css
     
-    # Navegación y estructura profesional
+    # Navegación y estructura
     toc: true
-    toc-depth: 2
-    toc-expand: 1
+    toc-depth: 3
+    toc-expand: 2
     number-sections: true
-    number-depth: 2
     
-    # Diseño limpio
-    grid:
-      sidebar-width: 250px
-      body-width: 900px
-      margin-width: 300px
-    
-    # Características de código
+    # Características básicas
     code-copy: true
     code-overflow: wrap
     code-line-numbers: false
-    code-block-bg: "#f8f9fa"
-    code-block-border-left: "#e9ecef"
     highlight-style: github
     
-    # Navegación y enlaces
+    # Enlaces y navegación
     link-external-newwindow: true
-    link-external-icon: true
     
-    # Elementos interactivos
+    # Incluir elementos interactivos
     include-after-body: include-after.html
-    
-    # Tipografía profesional
-    mainfont: "system-ui"
-    fontsize: "1.1em"
-    linestretch: 1.6
       
   pdf:
     documentclass: scrbook
