🔧 Resolver problemas de compatibilidad y configuración
- CSS: Agregar propiedad estándar 'background-clip' para mejor compatibilidad
- VS Code Extension: Actualizar activationEvents a sintaxis moderna (array vacío)
- VS Code Extension: Agregar iconos faltantes en vistas del explorer
- VS Code Extension: Remover referencia temporal a icono inexistente
- Mejorar compatibilidad cross-browser y eliminar warnings

--- a/vscode-extension/package.json
+++ b/vscode-extension/package.json
@@ -21,11 +21,7 @@
     "terminal",
     "developer-tools"
   ],
-  "activationEvents": [
-    "onCommand:homebrew-cli-guide.searchTools",
-    "onCommand:homebrew-cli-guide.openGuide",
-    "onView:homebrewTools"
-  ],
+  "activationEvents": [],
   "main": "./out/extension.js",
   "contributes": {
     "commands": [
@@ -63,6 +59,7 @@
         {
           "id": "homebrewTools",
           "name": "CLI Tools",
+          "icon": "$(tools)",
           "when": "config.homebrew-cli-guide.showExplorerView"
         }
       ]
