🔄 Migración completa: Actualizar herramientas obsoletas
📦 Herramientas migradas:
• neofetch → fastfetch (4x más rápido, mantenido activamente)
• tldr → tealdeer (implementación Rust, compatible 100%)

📚 Nuevo contenido:
• Capítulo completo 'Gestión de Homebrew' con mejores prácticas
• Guía de migración detallada (MIGRATION.md)
• Documentación de troubleshooting y mantenimiento

🔧 Archivos actualizados:
• monitoreo.qmd - Sección fastfetch con configuración JSON
• utilidades.qmd - Sección tealdeer con alternativas
• index.qmd - Referencias actualizadas
• configuracion.qmd - Scripts y listas modernizadas
• README.md - Comandos de ejemplo actualizados
• _quarto.yml - Nuevo capítulo agregado

✅ Beneficios:
• Mejor rendimiento y velocidad
• Herramientas mantenidas activamente
• Configuración más flexible
• Compatibilidad completa con flujos existentes
• Documentación detallada del proceso de migración

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -74,6 +74,7 @@ book:
     - part: "Recursos Adicionales"
       chapters:
         - combinaciones.qmd
+        - homebrew-management.qmd
         - configuracion.qmd
         - ecosystem-integration.qmd
 
