--- a/api-server/package.json
+++ b/api-server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "test": "jest",
+    "test": "jest --passWithNoTests",
     "docker:build": "docker build -t homebrew-cli-api .",
     "docker:run": "docker run -p 3000:3000 homebrew-cli-api"
   },
