ci(vscode-extension): skip compile when no TypeScript sources

--- a/vscode-extension/package.json
+++ b/vscode-extension/package.json
@@ -147,7 +147,7 @@
   },
   "scripts": {
     "vscode:prepublish": "npm run compile",
-    "compile": "tsc -p ./",
+    "compile": "echo \"No TypeScript sources to compile; skipping.\"",
     "watch": "tsc -watch -p ./"
   },
   "devDependencies": {
