--- a/vscode-extension/package.json
+++ b/vscode-extension/package.json
@@ -151,9 +151,9 @@
     "watch": "tsc -watch -p ./"
   },
   "devDependencies": {
-    "@types/vscode": "^1.74.0",
-    "@types/node": "^18.x",
-    "typescript": "^4.9.4"
+    "@types/vscode": "^1.81.0",
+    "@types/node": "^20.0.0",
+    "typescript": "^5.3.3"
   },
   "dependencies": {
     "axios": "^1.4.0"
