--- a/vscode-extension/package.json
+++ b/vscode-extension/package.json
@@ -154,7 +154,7 @@
   "devDependencies": {
     "@types/vscode": "^1.81.0",
     "@types/node": "^20.0.0",
-    "typescript": "^5.3.3",
+    "typescript": "5.3.3",
     "eslint": "^8.50.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0"
