--- a/api-server/package.json
+++ b/api-server/package.json
@@ -7,6 +7,8 @@
     "start": "node server.js",
     "dev": "nodemon server.js",
     "test": "jest --passWithNoTests",
+    "lint": "eslint . --ext .js",
+    "lint:fix": "eslint . --ext .js --fix",
     "docker:build": "docker build -t homebrew-cli-api .",
     "docker:run": "docker run -p 3000:3000 homebrew-cli-api"
   },
@@ -24,9 +26,10 @@
     "cors": "^2.8.5"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10",
+    "nodemon": "^3.0.1",
     "jest": "^29.7.0",
-    "supertest": "^6.3.4"
+    "supertest": "^6.3.4",
+    "eslint": "^8.57.1"
   },
   "engines": {
     "node": ">=18.0.0"
