--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,17 +5,8 @@
     "es2021": true,
     "browser": false
   },
-  "parser": "@typescript-eslint/parser",
-  "parserOptions": {
-    "ecmaVersion": 2020,
-    "sourceType": "module",
-    "project": ["./vscode-extension/tsconfig.json"]
-  },
-  "plugins": ["@typescript-eslint"],
-  "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended"],
+  "extends": ["eslint:recommended"],
   "rules": {
-    "no-unused-vars": "off",
-    "@typescript-eslint/no-unused-vars": ["warn", { "argsIgnorePattern": "^_" }],
-    "@typescript-eslint/explicit-module-boundary-types": "off"
+    "no-unused-vars": ["warn", { "argsIgnorePattern": "^_" }]
   }
 }
