chore: enable Dependabot automerge for patch & security updates; add shellcheck and benchmarks workflows; add good-first-issue template and Contribute page

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -25,3 +25,11 @@ updates:
     open-pull-requests-limit: 5
     labels:
       - "dependencies"
+
+# Automerge configuration: enable safe automerge for patch semantic updates
+automerged_updates:
+  enabled: true
+  semver_level: patch
+  # Security updates should also be automerged when CI passes
+  types:
+    - "security"
